# RAGPrep

./: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
ragprep/: config.py  desktop.py  diagnostics.py  html_render.py  markdown_table.py  model_cache.py  ocr_html.py  pdf_render.py  pdf_text.py  pipeline.py  pymupdf4llm_json.py  pymupdf4llm_markdown.py  structure_ir.py  table_grid.py  table_merge.py  text_merge.py
ragprep/layout/: fast_layout.py  glm_doclayout.py
ragprep/ocr/: __init__.py  glm_ocr.py  lighton_assets.py  lighton_ocr.py  lighton_server.py  lightonocr.py  llama_server_client.py  llama_server_payload.py  llamacpp_cli_runtime.py  llamacpp_runtime.py
ragprep/web/: app.py
ragprep/web/static/: htmx.min.js
ragprep/web/templates/: _job_result.html  _job_status.html  _result.html  index.html
scripts/: bench_pdf_to_html.py  bench_pdf_to_markdown.py  build-standalone.ps1  package-standalone.ps1  pdf_to_html.py  pdf_to_json.py  pdf_to_markdown.py  pdf_to_markdown_pages.py  repro-unknown-hard-error.ps1  selfcheck-gguf-runtime.ps1  selfcheck-llava-cli-runtime.ps1  selfcheck-standalone-move.ps1  selfcheck-standalone-prefetch-invocation.ps1  smoke-real-ocr.py  standalone-io.ps1  verify-standalone.ps1
tests/: test_config.py  test_desktop_launcher.py  test_download_filenames.py  test_e2e_pdf_to_markdown.py  test_fast_layout.py  test_glm_doclayout.py  test_glm_ocr.py  test_html_render.py  test_lighton_assets.py  test_lighton_ocr.py  test_lighton_server.py  test_lightonocr.py  test_lightonocr_backend.py  test_llama_server_client.py  test_llama_server_payload.py  test_markdown_table.py  test_model_cache.py  test_ocr_html.py  test_ocr_html_rowspan.py  test_pdf_render.py  test_pdf_text.py  test_pipeline.py  test_pipeline_fast_pass.py  test_pipeline_html.py  test_pipeline_lightonocr_helpers.py  test_pipeline_sanitization.py  test_pipeline_table_cell_correction.py  test_pymupdf4llm_json.py  test_pymupdf4llm_markdown.py  test_smoke.py  test_standalone_scripts.py  test_structure_ir.py  test_table_grid.py  test_table_merge.py  test_table_merge_fallback.py  test_text_merge.py  test_web_streaming.py  test_web_templates.py
work/debug-dup-page1/: after_fix_page1.html  document.html  ocr_merged.txt  partial.html  result_page1.html
work/debug-dup-page1/stages/: merged_text.txt  ocr_before_repair.txt  ocr_raw.txt  ocr_secondary.txt  summary.json
